# Smartmate/App/Logic/ViewModels/BookmarksViewModel.swift
@@ -14,7 +14,9 @@ final class BookmarksViewModel: ObservableObject {
     
     private var bookmarkList: [Bookmark] = []
     
-    @Published var showedBookmarks: [Bookmark] = []
+    @Published private(set) var lastPage: Int = 0
+    @Published private(set) var isLoading: Bool = false
+    @Published var filteredBookmarks: [Bookmark] = []
     @Published var onlyFavorite: Bool = false {
         didSet {
             filterBookmarks()
@@ -22,16 +24,39 @@ final class BookmarksViewModel: ObservableObject {
     }
     
     init() {
-        BookmarksAPI.listBookmarks { (bookmarks, error) in
+        requestData()
+    }
+    
+    func loadPageIfNeeded(_ item: Bookmark) {
+        guard self.filteredBookmarks.isLastItem(item) else { return }
+        requestData()
+    }
+    
+    func requestData(limit: Int? = nil) {
+        let limit = limit ?? 10
+        requestData(page: lastPage + 1, limit: limit)
+    }
+    
+    private func requestData(page: Int, limit: Int) {
+        guard !isLoading else { return }
+        isLoading = true
+        
+        BookmarksAPI.listBookmarks(page: page, per: limit) { [weak self] (bookmarks, error) in
+            guard let self = self else { return }
+            self.isLoading = false
+            
             if let bookmarks = bookmarks {
-                self.bookmarkList = bookmarks
-            } else if let error = error?.localizedDescription {
-                print(error)
+                self.bookmarkList.append(contentsOf: bookmarks.data)
+                self.filterBookmarks()
+                
+                self.lastPage = bookmarks.page.position.current
+            } else {
+                print(error?.localizedDescription ?? "---->> Error")
             }
         }
     }
     
     private func filterBookmarks() {
-        showedBookmarks = onlyFavorite ? bookmarkList.filter { $0.isFavorite } : bookmarkList
+        filteredBookmarks = onlyFavorite ? bookmarkList.filter { $0.isFavorite } : bookmarkList
     }
 }
